# rock

attach_1/: exp.ipynb  pyproject.toml  train.py
attach_1/labels/: attach_1_06.json  attach_1_09.json  attach_1_10.json
attach_1/utils/: dataset.py
attach_2/: eval.ipynb  pyproject.toml  result.csv
attach_3/: eval.ipynb  main.py  p3_result.csv  pyproject.toml
attach_4/: connectivity_3d.py  jrc.py  main.py  p4_crack_summary.csv  p4_suggested_holes.txt
代码/attach_1/: .gitignore  generate.py  test.py
代码/attach_1/labels/: attach_1_05.json  attach_1_07.json  attach_1_08.json
代码/attach_2/: pyproject.toml
代码/attach_3/: 01-eval.py  table2_jrc.csv
代码/attach_4/: p4_suggested_holes.txt
完整代码/attach_1/: eval.ipynb
完整代码/attach_1/labels/: attach_1_01.json  attach_1_02.json  attach_1_03.json  attach_1_04.json
完整代码/attach_2/: main.py
完整代码/attach_3/: README.md  p3_result.csv  pyproject.toml
完整代码/attach_4/: connectivity_3d.py  p4_crack_summary.csv  pyproject.toml
要求附件/问题4/源代码/: 问题4-源代码-main.py
