[project]
name = "attach-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "opencv-python>=4.12.0.88",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[[index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
