[project]
name = "attach-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "segmentation-models-pytorch>=0.5.0",
    "torchvision>=0.23.0",
]
