[project]
name = "attach-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
